# delegation-execution-authority

./: .dockerignore  .env.example  .gitignore  Dockerfile  Justfile  Makefile  README.md  ape-config.yaml  foundry.toml  package.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: tests.yml
contracts/: DelegationContract.sol  DelegationFactory.sol  DelegationManager.vy
contracts/interfaces/: IDelegationContract.sol  IDelegationFactory.sol
script/: DeployBase.s.sol
scripts/: deploy.py  deploy_factory.py  set_code.py  verify.py  xxx_grant_delegate.py
services/: __init__.py  factory_deployer_service.py
src/: DelegationFactory.sol
test/helpers/mocks/: CallableMock.sol
test/unit/: DelegationContract.t.sol  DelegationFactory.t.sol
tests/: conftest.py  test_delegation_contract.py  test_delegation_factory.py
typings/ape/: __init__.pyi
utils/: verification.py
